Cambios de la seguridad de las API